--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "pg": "^8.12.0",
     "reflect-metadata": "^0.2.2",
     "temp": "file:",
-    "typeorm": "^0.3.20"
+    "typeorm": "^0.3.20",
+    "zod": "^3.24.0-canary.20241107T043915"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
