Refatorando e implementando Caso de Uso para Exibição de produtos

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "temp": "file:",
+    "tsyringe": "^4.8.0",
     "typeorm": "^0.3.20",
     "zod": "^3.24.0-canary.20241107T043915"
   },
