--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
     "pretest:int": "docker run --name testsdb -e POSTGRES_PASSWORD=postgres -p 5433:5432 -d postgres",
     "test:int": "npx dotenv-cli -e .env.test -- jest --runInBand --config ./jest.int.config.ts",
+    "migration:run": "npm run typeorm -- migration:run -d src/common/infrastructure/typeorm/index.ts",
     "posttest:int": "docker stop testsdb && docker rm testsdb"
   },
   "keywords": [],
